<resources>
    <string name="app_name">BudgetApp</string>

    <!-- Main Activity Strings -->
    <string name="input_button_txt">Set a budget for the week</string>
    <string name="progress_button_txt">Track Progress for the Month</string>
    <string name="money_left">Money Left for Month: $%1$.2f</string>
    <string name="enter_expenditures">Enter expenditures:</string>
    <string name="amount_in_dollars">Amount (in $)</string>
    <string name="category">Category</string>
    <string name="expenditures_button_txt">Submit Expenditure</string>
    <string name="summary_spinner_txt">Summary for each month:</string>

    <!-- Input Activity Strings -->
    <string name="month_choice_txt">Choose month</string>
    <string name="new_month_year_txt">Add new month+year</string>
    <string name="month_button_txt">Enter new month</string>
    <string name="enter_save_amount">Enter Amount You Want to Save:</string>
    <string name="enter_spend_amount">Enter Amount You Want to Spend:</string>
    <string name="budget_button_txt">Submit Budget Info</string>
    <string-array name="months">
        <item> </item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Progress Activity Strings -->
    <string name="money_spent_month">$%1$.2f Spent This Month</string>
    <string name="on_budget_state">On Budget: %s</string>

    <!-- Expenditures Activity Strings -->
    <string name="category_header">Category</string>
    <string name="amount_header">Amount (in $)</string>

    <!-- Summary Activity Strings -->
    <string name="amt_spent_month">Amount Spent this Month: $%1$.2f</string>
    <string name="net_spend_month">Net Spending for Month: $%1$.2f</string>
    <string name="net_spend_disclaimer">(This is added to save totals once month ends).</string>
    <string name="amt_saved_month">Amount Saved this Month: $%1$.2f</string>
    <string name="amt_saved_total">Amount Saved in Total: $%1$.2f</string>
    <string name="top3_header">Top 3 Categories of Spending</string>
    <string name="daily_breakdown">Daily Breakdown</string>
    <string name="months_purchases">All purchases for month</string>

    <!-- Menu Strings -->
    <string name="action_jump">Reset</string>

</resources>
