<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SummaryActivity">

    <TextView
        android:id="@+id/tv_summary_title"
        android:textSize="40sp"
        android:background="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_amt_spent_month"
        android:text="@string/amt_spent_month"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/tv_net_spend_month"
        android:text="@string/net_spend_month"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/tv_net_spent_disclaimer"
        android:text="@string/net_spend_disclaimer"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/tv_amt_saved_month"
        android:text="@string/amt_saved_month"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/tv_amt_saved_total"
        android:text="@string/amt_saved_total"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/tv_top3_header"
        android:text="@string/top3_header"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cat_header"
            android:text="@string/category_header"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/tv_amt_header"
            android:text="@string/amount_header"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <GridView
        android:id="@+id/top3"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:numColumns="2">

    </GridView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/daily_breakdown_button"
            android:onClick="dailyBreakdown"
            android:text="@string/daily_breakdown"
            style="@style/EdgeButton" />

        <Button
            android:id="@+id/months_purchases"
            android:onClick="viewMonthPurchases"
            android:text="@string/months_purchases"
            style="@style/EdgeButton" />

    </LinearLayout>

</LinearLayout>