<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_todays_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/input_button"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="inputMe"
        android:text="@string/input_button_txt" />

    <Button
        android:id="@+id/progress_button"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkProgress"
        android:text="@string/progress_button_txt" />

    <TextView
        android:id="@+id/tv_money_left"
        android:text="@string/money_left"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:text="@string/enter_expenditures"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/amount_in_dollars"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/et_amount"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/category"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/et_category"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="0dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/expenditures_button"
        android:onClick="submitExpenditures"
        android:text="@string/expenditures_button_txt"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_summary"
            android:text="@string/summary_spinner_txt"
            android:textSize="16dp"
            android:textAlignment="gravity"
            android:gravity="right"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/select_summary"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

</LinearLayout>