<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="@string/month_choice_txt"
            android:textSize="20sp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textAlignment="gravity"
            android:layout_marginEnd="4dp"
            android:text="@string/new_month_year_txt"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/select_budget_month"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content">
        </Spinner>

        <Spinner
            android:id="@+id/select_new_month"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Spinner>

        <Spinner
            android:id="@+id/select_new_year"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/month_button"
        android:text="@string/month_button_txt"
        android:onClick="submitNewMonth"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/enter_save_amount"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:labelFor="@+id/et_saving" />

    <EditText
        android:id="@+id/et_saving"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        android:layout_gravity="center"
        android:layout_width="256dp"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_spend_amount"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:labelFor="@+id/et_budget" />

    <EditText
        android:id="@+id/et_budget"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:layout_gravity="center"
        android:layout_width="256dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit_budget_button"
        android:layout_marginTop="32dp"
        android:text="@string/budget_button_txt"
        android:onClick="submitBudget"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>